Fixed nav logo on mobile

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,4 +1,4 @@
-nav.transparent .logo.white {
+nav.transparent .nav-wrapper .logo.white {
     display: none;
 }
 
